# hayate-auth

./: CHANGELOG.md  DESIGN.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: asvs.md
docs/research/: authorization-server.md  kdf.md
examples/mcp-oauth/: README.md  app.py  pyproject.toml
examples/mcp-oauth/tests/: test_e2e.py
examples/todo/: README.md  app.py  entry.py  pyproject.toml  wrangler.toml
examples/todo/tests/: test_app.py
spike/as-workers/: entry.py  pylock.toml  pyproject.toml  wrangler.toml
spike/kdf-workers/: baseline.py  entry.py  pylock.toml  pyproject.toml  wrangler.toml
src/hayate_auth/: __init__.py  __main__.py  _signed.py  _uuid7.py  adapter.py  api_key.py  auth.py  authorization_server.py  cimd.py  csrf.py  lazy.py  oauth.py  passkey.py  password.py  plugin.py  principal.py  routes.py  schema.py  session.py  totp.py  two_factor.py  verification.py
src/hayate_auth/adapters/: d1.py  sqlite.py
src/hayate_auth/crypto/: __init__.py
src/hayate_auth/plugins/: __init__.py  magic_link.py
tests/: conftest.py  test_api_key.py  test_app_integration.py  test_attacks.py  test_authorization_server.py  test_crypto.py  test_csrf.py  test_d1_adapter.py  test_email_flow.py  test_generate_cli.py  test_magic_link.py  test_oauth.py  test_passkey.py  test_sqlite_adapter.py  test_totp.py  test_uuid7.py  test_verification.py  webauthn_device.py
