[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[project]
name = "hayate-auth"
version = "0.3.0"
description = "Authentication for hayate as a pure fetch(Request) -> Response handler: email+password, sessions, CSRF"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yusuke Hayashi" }]
keywords = ["hayate", "authentication", "session", "better-auth", "workers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Session",
]
dependencies = ["hayate>=0.8.0", "hayate-fetch>=0.1.0"]

[project.urls]
Repository = "https://github.com/hayatepy/hayate-auth"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["spike"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
