[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[project]
name = "hayate-auth"
version = "0.7.1"
description = "Standards-first authentication for hayate: sessions, OAuth 2.1, passkeys, API keys, and Cloudflare D1"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yusuke Hayashi" }]
keywords = ["hayate", "authentication", "session", "better-auth", "workers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Session",
]
dependencies = ["hayate>=0.8.0", "hayate-fetch>=0.1.0"]

[project.optional-dependencies]
passkey = ["webauthn>=2.0"]

[project.urls]
Repository = "https://github.com/hayatepy/hayate-auth"
Documentation = "https://github.com/hayatepy/hayate-auth#readme"
Changelog = "https://github.com/hayatepy/hayate-auth/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "soft-webauthn>=0.1.4",
  "webauthn>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["spike"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
